<resources>
    <string name="app_name">Quotes Bank</string>
    <string name="pop_heading">Would Like to Send You Notifications.</string>
    <string name="pop_details">Notification may include alerts,
    sounds and icon badges. These can\'t be configured in Setting </string>
    <string name="pop_dont">Don\'t Allow</string>
    <string name="pop_ok">Ok</string>
    <string name="select">Select Your Interest</string>
    <string name="bed1">At quotebank, we think everyone</string>
    <string name="bed2">Please enter what time you</string>
    <string name="bed3">motivational note.</string>
    <string name="bed4">Notifications will be sent to you 10</string>
    <string name="bed5">minutes after you wake up and 10</string>
    <string name="bed6">minutes before you sleep.</string>
    <string name="ok">Ok</string>
</resources>