<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="310dp"
    android:layout_height="200dp"
android:background="@drawable/dialog_box"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.77">

        <RelativeLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvheading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="22dp"
                android:layout_marginRight="22dp"
                android:text="@string/pop_heading"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tvdetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvheading"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:textSize="14sp"
                android:gravity="center"
                android:text="@string/pop_details"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/colorPrimary"></View>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.23">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvDontAllow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_toStartOf="@+id/viewLine"
                android:layout_toLeftOf="@+id/viewLine"
                android:gravity="center"
                android:text="@string/pop_dont"
                android:textColor="@color/colorBlue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/viewLine"
                android:gravity="center"
                android:text="@string/pop_ok"
                android:textColor="@color/colorBlue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/viewLine"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@color/colorPrimary"></View>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>